# genuine

./: 404.html  LICENSE  README.md  README.next.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
api/: index.html
docs/: api.md  factories.md  griffe_resolve_aliases.py  index.md  integrations.md
examples/: assocs.py  dep_attrs.py  persisted.py  simple_build.py  transient.py
factories/: index.html
integrations/: index.html
search/: search_index.json
src/genuine/: __init__.py  bases.py  errors.py  random.py  stubs.py  types.py  values.py
test/: bases_test.py  genuine_test.py
tests/: associations_test.py  bases_test.py  conftest.py  genuine_test.py  singletons_test.py  specializations_test.py  stubs_test.py  values_test.py
